<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2018 Travis Spinelli

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/start_screen_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/champlain_logo"
        android:scaleType="fitXY"
        android:contentDescription="@string/logo_image_description"/>

    <TextView
        android:id="@+id/click_to_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:shadowColor="@color/white"
        android:shadowDx="8"
        android:shadowDy="8"
        android:shadowRadius="8"
        android:text="@string/start_text"
        android:textAlignment="center"
        android:textColor="@color/champlain_blue"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fadingEdge="none"
        android:gravity="bottom|left"
        android:orientation="horizontal"
        android:showDividers="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_screen_main">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="5"
            android:shadowColor="@color/white"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="8"
            android:text="@string/connecting_text"
            android:textColor="@color/champlain_blue"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/loading_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/loading_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>