<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2018 Travis Spinelli

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:shadowColor="@color/white"
        android:shadowDx="8"
        android:shadowDy="8"
        android:shadowRadius="8"
        android:text="@string/settings_title"
        android:textAlignment="center"
        android:textColor="@color/champlain_blue"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/icons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="top|start"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/use_orientation_themes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginBottom="8dp"
                    android:text="@string/use_orientation_themes"
                    android:textStyle="bold"
                    android:textColor="@color/champlain_blue"
                    android:textSize="20sp"/>

                <ToggleButton
                    android:id="@+id/use_orientation_themes_toggle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="left"
                android:layout_marginBottom="8dp">

                <Button
                    android:id="@+id/refresh_data_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@color/champlain_blue"
                    android:gravity="center_vertical"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:text="@string/refresh_data_button"
                    android:textColor="@color/white"
                    android:textSize="25sp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>